# netlisp

./: .env.example  .gitignore  AGENTS.md  AUDIT.md  CLAUDE.md  HW-RDR-001_Rev-E_15.docx  Inventory.md  LICENSE  README.md  SPEC.md  build.zig  build.zig.zon  guardian.toml
.githooks/: README.md  post-checkout  post-commit  post-merge
.guardian/: comptime-quota.txt  int-from-float-budget.txt  mutation.txt  panic-budget.txt  pub-api.txt  spec-drift.txt  unsafe-ops-budget.txt
docs/: architecture.md  autorouter-audit.md  constraints_dsl.md  cyclops-analog-icd.md  dsl-reference.md  editor-map-audit.md  full-pcb-design-audit.md  guardian-upgrade-plan.md  inherited-net-classes-plan.md  kicad-sync-architecture.md  kicad-sync-phase-c.md  kicad-sync-setup.md  language-forms.md  layout-context-audit.md  maintainability-audit.md  pcb-editor-audit.md  power-layout-wip.md  power-rail-reuse.notes.md  rough-hybrid-scoring-plan.md  schematic-syntax.md  sexp-language.md  system_diagram_research.md  uuid-sync-research.md  uuid_research.md
frontend/: Makefile  README.md  gleam.toml  manifest.toml
scripts/: diagram_png.py  migrate_layout_origins.py  rough_corpus_bench.py  test_kicad_sync_layout.py
src/: asserted_fns.zig  (+62 more)
tools/kicad-sync-plugin/: README.md  metadata.json  pyproject.toml
tools/kicad-sync-plugin/kicad_action_plugin/: __init__.py
tools/kicad-sync-plugin/plugins/: __init__.py  config.py  eda_client.py  eda_sync_action.py  kipy_adapter.py  netlist_parser.py  oauth_client.py  sync_core.py
tools/kicad-sync-plugin/tests/: test_netlist_parser.py  test_sync_core.py
(+957 files in other folders)
