[project]
name = "eda-kicad-sync"
version = "0.1.0"
description = "KiCad 10 IPC plugin that syncs PCBs from a Canopy EDA server."
requires-python = ">=3.9"
dependencies = [
  "kicad-python>=0.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
]

[project.scripts]
eda-kicad-sync = "plugins.eda_sync_action:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["plugins"]
