[project]
name = "eda-kicad-sync"
version = "0.1.0"
description = "KiCad 10 IPC plugin that syncs PCBs from a Canopy EDA server."
requires-python = ">=3.9"
dependencies = [
  "kicad-python>=0.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
]

# No [project.scripts] entry: the KiCad action plugin spawns
# `python -m plugins.eda_sync_action` directly (see kicad_action_plugin/
# __init__.py), so a console-script .exe is not needed. Adding one breaks
# `pip install -e .` on Windows when the .exe is locked or partially
# uninstalled (WinError 2 on the .deleteme rename dance).

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["plugins"]
